<resources>

    <!--    generics-->
    <string name="generic_error">Ocorreu um erro. Por favor tente novamente mais tarde</string>
    <string name="text_task_list_empty">Nenhuma tarefa cadastrada</string>
    <string name="text_load_task_list">Carregando tarefas</string>
    <string name="text_success_delete_task">Tarefa removida com sucesso </string>
    <string name="text_dialog_button_confirm">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Cliquem em confirmar para remover a tarefa.</string>
    <string name="dialog_update_success">Tarefa atualizada com sucesso</string>

    <!--    labels-->
    <string name="app_name">TaskApp</string>
    <string name="recover_instructions">Informe seu e-mail de cadastro para receber \num link para alteração da conta</string>
    <string name="desc_label">Descrição</string>
    <string name="email_label">Email</string>
    <string name="password_label">Senha</string>
    <string name="create_account_label">Criar conta</string>
    <string name="recover_account_label">Recuperar conta</string>
    <string name="new_task_label">Nova Tarefa</string>
    <string name="status_label">Status</string>

    <!--    hints-->
    <string name="edit_email">Digite seu Email</string>
    <string name="edit_password">Digite sua senha</string>
    <string name="edit_new_login_screen">Criar nova tela de login</string>


    <!--    links-->
    <string name="createAccount_link">Criar conta</string>
    <string name="recoverAccount_link">Recuperar conta</string>

    <!--    buttons-->
    <string name="btn_login">Login</string>
    <string name="btn_recover">Enviar</string>
    <string name="btn_register">Criar conta</string>
    <string name="btn_save">Salvar</string>

    <!--    radio buttons-->
    <string name="radio_btn_todo">A fazer</string>
    <string name="radio_btn_doing">Fazendo</string>
    <string name="radio_btn_done">Feita</string>

    <!--    task status-->
    <string name="status_task_todo">A FAZER</string>
    <string name="status_task_doing">FAZENDO</string>
    <string name="status_task_done">FEITAS</string>

    <!--    descriptions-->
    <string name="description_bnt_add">Botão adicionar tarefa</string>

    <!--    toast messages-->
    <string name="editEmail_isEmpty">Preencha o campo Email</string>
    <string name="editPassword_isEmpty">Preencha o campo Senha</string>
    <string name="editDesc_isEmpty">Peencha o campo \nCriar nova tela de login</string>

    <!--    bottom sheet dialog-->
    <string name="warning">Atenção</string>
    <string name="title_warning">Atenção</string>
    <string name="btn_warning">Entendi</string>

    <!--    item task-->
    <string name="create">Criar layout da tela de login</string>
    <string name="btn_delete">Remover</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_details">Detalhes</string>

    <!--     home fragment-->
    <string name="dialog_title_confirm_logout">Deseja sair da sua conta?</string>
    <string name="dialog_message_confirm_logout">Clique em confirmar para sair da sua conta.</string>

    <!--    recover fragment-->
    <string name="dialog_recover_account">Pronto, acabamos de enviar um link de recuperação para o seu email</string>

    <!--    form task fragment-->
    <string name="dialog_save_success_form_task_fragment">Tarefa salva com sucesso</string>

    <!--    to do fragment-->

    <!--    form task fragment-->
    <string name="text_toolbar_update_form_task_fragment">Editando tarefa</string>

<!--    Firebase Authentication errors-->
    <string name="error_supplied_credentials_incorrect_register_fragment">Usuário e/ou senha incorreto(s)</string>
    <string name="error_account_not_registered_register_fragment">Nenhuma conta encontrada com este email.</string>
    <string name="error_invalid_email_register_fragment">Insira um email válido</string>
    <string name="error_invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="error_email_already_registered_register_fragment">Este email já está em uso.</string>
    <string name="error_weak_password_register_fragment">Insira uma senha mais forte</string>
</resources>