<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/create" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:tint="@color/default_color" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:tint="@color/default_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:background="@drawable/bg_btn"
                android:text="@string/btn_delete"
                app:backgroundTint="@color/delete"
                style="@style/item_task_button"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_btn"
                android:text="@string/btn_edit"
                app:backgroundTint="@color/default_color"
                style="@style/item_task_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_delete"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_details"
                android:layout_width="wrap_content"
                android:background="@drawable/bg_btn"
                android:text="@string/btn_details"
                app:backgroundTint="@color/details"
                style="@style/item_task_button"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="@+id/btn_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>